--- a/onelist.css
+++ b/onelist.css
@@ -42,10 +42,20 @@ section#features {
 
 section#screenshots {
   background-clip: content-box;
-  text-align: center; }
+  text-align: center;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  height: 660px; }
   section#screenshots img {
-    position: relative;
-    width: 300px; }
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    -webkit-transition: opacity 1s linear;
+    -moz-transition-property: opacity;
+    -moz-transition-duration: 1s; }
 
 section#features,
 section.msg {
@@ -134,7 +144,8 @@ footer {
     text-align: left; }
 
   section#screenshots {
-    background-color: transparent; }
+    background-color: transparent;
+    width: 395px; }
     section#screenshots img {
       width: 395px; }
 
@@ -160,7 +171,8 @@ footer {
     margin-bottom: 0px; }
 
   section#screenshots {
-    top: 40px; }
+    top: 40px;
+    width: 220px; }
     section#screenshots img {
       width: 220px; }
 
@@ -176,7 +188,8 @@ footer {
     margin-bottom: 0px; }
 
   section#screenshots {
-    top: 56px; }
+    top: 56px;
+    width: 250px; }
     section#screenshots img {
       width: 250px; }
 
