--- a/onelist.scss
+++ b/onelist.scss
@@ -60,10 +60,20 @@ section#features {
 section#screenshots {
   background-clip: content-box;
   text-align: center;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  height: 660px;
     
   img {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 300px;
+    -webkit-transition: opacity 1s linear;
+    -moz-transition-property: opacity;
+    -moz-transition-duration: 1s;
   }  
 }
 
@@ -188,6 +198,7 @@ footer {
   
   section#screenshots {
     background-color: transparent;
+    width: 395px;
       
     img {
       width: 395px;
@@ -225,6 +236,7 @@ footer {
   
   section#screenshots {
     top: 40px;
+    width: 220px;
         
     img {
       width: 220px;
@@ -249,6 +261,7 @@ footer {
     
   section#screenshots {
     top: 56px;
+    width: 250px;
         
     img {
       width: 250px;
