--- a/onelist.scss
+++ b/onelist.scss
@@ -74,6 +74,7 @@ header {
           }
           img {
             margin-right: 4px;
+            border-radius: 4px;
           }
 
           &:HOVER {
