--- a/onelist.css
+++ b/onelist.css
@@ -15,6 +15,7 @@ header {
     margin: 0px;
     padding: 0px;
     vertical-align: top;
+    font-weight: normal;
     text-rendering: optimizeLegibility; }
   header .icon {
     border-radius: 18px;
@@ -91,7 +92,7 @@ section#screenshots {
 section#features,
 section.msg {
   padding: 20px;
-  line-height: 1.3em; }
+  line-height: 1.45em; }
 
 section.msg a {
   color: #5693db; }
@@ -99,22 +100,23 @@ section.msg a {
 section#features h2 {
   font-weight: normal;
   text-align: center;
-  margin-bottom: 30px; }
+  margin-bottom: 20px; }
 section#features ul {
   margin-bottom: 30px;
   list-style: none;
-  padding-left: 35px; }
+  padding-left: 45px; }
   section#features ul li {
     position: relative;
     margin-bottom: 10px; }
     section#features ul li img {
       position: absolute;
-      left: -32px;
+      left: -40px;
       top: 8px; }
     section#features ul li em {
       font-style: normal;
       margin-bottom: 30px; }
     section#features ul li p {
+      max-width: 400px;
       margin: 0px;
       font-size: 0.9em; }
 section#features a {
@@ -185,7 +187,7 @@ footer {
 
   section#features {
     padding-left: 20px;
-    top: 60px; }
+    top: 23px; }
     section#features h2 {
       text-align: left; }
     section#features a {
