--- a/onelist.scss
+++ b/onelist.scss
@@ -22,6 +22,7 @@ header {
     margin: 0px;
     padding: 0px;
     vertical-align: top;
+    font-weight: normal;
     text-rendering: optimizeLegibility;
   }
   
@@ -127,7 +128,7 @@ section#screenshots {
 section#features,
 section.msg {
   padding: 20px;
-  line-height: 1.3em;
+  line-height: 1.45em;
 }
 
 section.msg a {
@@ -138,13 +139,13 @@ section#features {
   h2 {
     font-weight: normal;
     text-align: center;
-    margin-bottom: 30px
+    margin-bottom: 20px
   }
   
   ul {
     margin-bottom: 30px;
     list-style: none;
-    padding-left: 35px;
+    padding-left: 45px;
       
     li {
       position: relative;
@@ -152,7 +153,7 @@ section#features {
       
       img {
         position :absolute;
-        left: -32px;
+        left: -40px;
         top: 8px;
       }
       
@@ -162,6 +163,7 @@ section#features {
       } 
       
       p {
+        max-width: 400px;
         margin: 0px;
         font-size: 0.9em;
       }
@@ -261,7 +263,7 @@ footer {
   
   section#features {
     padding-left: 20px;
-    top: 60px;
+    top: 23px;
     
     h2 {
       text-align: left;
