Add Retina icons

--- a/onelist.scss
+++ b/onelist.scss
@@ -155,6 +155,8 @@ section#features {
         position :absolute;
         left: -40px;
         top: 8px;
+        widows: 28px;
+        height: 28px;
       }
       
       em {
