--- a/onelist.css
+++ b/onelist.css
@@ -111,7 +111,9 @@ section#features ul {
     section#features ul li img {
       position: absolute;
       left: -40px;
-      top: 8px; }
+      top: 8px;
+      widows: 28px;
+      height: 28px; }
     section#features ul li em {
       font-style: normal;
       margin-bottom: 30px; }
