--- a/onelist.scss
+++ b/onelist.scss
@@ -153,7 +153,7 @@ section#features {
         position :absolute;
         left: -40px;
         top: 8px;
-        widows: 28px;
+        width: 28px;
         height: 28px;
       }
       
