--- a/onelist.scss
+++ b/onelist.scss
@@ -178,6 +178,11 @@ section#features {
   }
 }
 
+.download img {
+  width: 225px;
+  height: 66px;
+}
+
 footer {
   margin-top: 40px;
   margin-bottom: 40px;
@@ -192,6 +197,7 @@ footer {
     
     img {
       opacity: 0.35;
+      width: 50px;
     }
     &:HOVER {
       color: #444;
