--- a/index.html.haml
+++ b/index.html.haml
@@ -66,10 +66,11 @@
           %br
           You can simply use Siri to create new reminders.
       %div.feature
-        %h3 Available on Apple Watch
+        %h3 
+          <span style="background-color: #5693DB; color: white; font-size: 10pt; border-radius: 4px; display: inline-block; height: 20px; width: 42px; line-height: 20px; text-align: center; position: relative; top: -2px;">NEW</span>&nbsp;Available on Apple Watch
         %img{:src => "img/icon-watch.png", :alt => "Apple Watch"}
         %p 
-          Coming soon: the missing app. 
+          The missing app. 
           %br
           1List brings all your reminders to the Apple Watch. You can also add new entries right from your wrist.
 
