--- a/_common.scss
+++ b/_common.scss
@@ -122,7 +122,7 @@ section.main {
   .feature {
     position: relative;
     display: inline-block;
-    max-width: 380px;
+    width: 380px;
     vertical-align: top;
     margin: 0 $margin-default $margin-default $margin-default;
 
@@ -211,7 +211,7 @@ footer {
     max-width: inherit;
 
     .feature {
-      max-width: inherit;
+      width: 90%;
     }
   }
 }
