Fix small screen features style

--- a/_common.scss
+++ b/_common.scss
@@ -211,7 +211,8 @@ footer {
     max-width: inherit;
 
     .feature {
-      width: 90%;
+      width: inherit;
+      display: block;
     }
   }
 }
