--- a/index.html.haml
+++ b/index.html.haml
@@ -66,8 +66,7 @@
           %br
           You can simply use Siri to create new reminders.
       %div.feature
-        %h3
-          <span style="background-color: #5693DB; color: white; font-size: 10pt; border-radius: 4px; display: inline-block; height: 20px; width: 42px; line-height: 20px; text-align: center; position: relative; top: -2px;">NEW</span>&nbsp;Available on Apple Watch
+        %h3 Available on Apple Watch
         %img{:src => "img/icon-watch.png", :alt => "Apple Watch"}
         %p
           The missing app. 
@@ -86,7 +85,7 @@
         %br
         %a{:href => "releasenotes"} Release Notes
         %br
-        Made by Studio AMANgA 2012-2015
+        Made by Studio AMANgA 2012-2017
     
     :javascript
       var _gaq = _gaq || [];
