--- a/_common.scss
+++ b/_common.scss
@@ -4,7 +4,7 @@ $margin-default: 20px;
 $margin-big: 40px;
 
 body {
-  font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+  font-family: system-ui, -apple-system, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
   margin: 0px;
 }
 
