--- a/index.html.haml
+++ b/index.html.haml
@@ -3,32 +3,21 @@
   %head
     %meta{:charset => "utf-8"}
     %title 1List for iPhone, iPad, and Apple Watch
-    %link{:rel => "stylesheet",    :href => "style.css?val", :type => "text/css"}
-    %link{:rel => "shortcut icon", :href => "http://www.studioamanga.com/img/favicon.ico"}
+    %link{:rel => "stylesheet", :href => "style.css?val", :type => "text/css"}
+    %link{:rel => "canonical", :href => "https://www.studioamanga.com/onelist/"}
+    %link{:rel => "shortcut icon", :href => "https://www.studioamanga.com/img/favicon.ico"}
     %link{:rel => "apple-touch-icon-precomposed", :href => "../img/touch-icon-iphone4.png"}
     %link{:rel => "apple-touch-icon-precomposed", :href => "../img/touch-icon-ipad.png", :sizes => "72x72"}
-    %meta{:name => "description",      :content => "1List, fast and simple reminders."}
-    %meta{:name => "viewport",         :content => "width=device-width"}
+    %meta{:name => "description", :content => "1List, fast and simple reminders."}
+    %meta{:name => "viewport", :content => "width=device-width"}
     %meta{:name => "apple-itunes-app", :content => "app-id=579440241"}
   %body
     %nav.general
       %ul
         %li
-          %a{:href => "http://www.studioamanga.com/"}
+          %a{:href => "https://www.studioamanga.com/"}
             %img{:alt => "StdAMG", :src => "img/icon-amg.png"}
             %span Studio AMANgA
-        %li
-          %a{:href => "http://www.studioamanga.com/contacts/"}
-            %img{:alt => "Contacts", :src => "img/icon-contacts.png"}
-            %span Contact[s]
-        %li
-          %a{:href => "http://www.studioamanga.com/comicbookday/"}
-            %img{:alt => "Comic Book Day", :src => "img/icon-comicbookday.png"}
-            %span Comic Book Day
-        %li
-          %a{:href => "http://www.studioamanga.com/gameskeeper/"}
-            %img{:alt => "Games Keeper", :src => "img/icon-gameskeeper.png"}
-            %span Games Keeper
 
     %header.top
       %div.title
@@ -78,14 +67,14 @@
           %img{:alt => "Download on the App Store", :src => "img/download-appstore.svg"}/
 
     %footer
-      %a{:href => "http://www.studioamanga.com"}
+      %a{:href => "https://www.studioamanga.com"}
         %img{:alt => "StdAMG", :src => "img/amgmini-black.png"}/
       %p
         “1List” for iPhone, iPad, iPod touch, and Apple Watch
         %br
         %a{:href => "releasenotes"} Release Notes
         %br
-        Made by Studio AMANgA 2012-2018
+        Made by Studio AMANgA 2012-2019
     
     :javascript
       var _gaq = _gaq || [];
