--- a/_common.scss
+++ b/_common.scss
@@ -3,9 +3,18 @@ $max-width: 860px;
 $margin-default: 20px;
 $margin-big: 40px;
 
+:root {
+  color-scheme: light dark;
+
+  --background-color: white;
+  --text-color: black;
+}
+
 body {
   font-family: system-ui, -apple-system, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
   margin: 0px;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 nav.general {
@@ -213,6 +222,29 @@ footer {
     .feature {
       width: inherit;
       display: block;
+    }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: black;
+    --text-color: white;
+  }
+
+  section.main {
+    .feature {
+      img {
+        -webkit-filter: invert(1);
+        filter: invert(1);
+      }
+    }
+  }
+
+  footer {
+    img {
+      -webkit-filter: invert(1);
+      filter: invert(1);
     }
   }
 }
