Include privacy policy link, update style

--- a/index.html.haml
+++ b/index.html.haml
@@ -70,9 +70,11 @@
       %p
         “1List” for iPhone, iPad, iPod touch, and Apple Watch
         %br
-        %a{:href => "releasenotes"} Release Notes
+        %a{:href => "releasenotes"}> Release Notes
+        ,
+        %a{:href => "privacy-policy"} Privacy Policy
         %br
-        Made by Studio AMANgA 2012-2019
+        Made by Studio AMANgA 2012-2020
     
     :javascript
       var _gaq = _gaq || [];
