--- a/index.html.haml
+++ b/index.html.haml
@@ -2,7 +2,7 @@
 %html{:lang => "en"}
   %head
     %meta{:charset => "utf-8"}
-    %title 1List for iPhone, iPad, and Apple Watch
+    %title 1List for iPhone, iPad, Mac, and Apple Watch
     %link{:rel => "stylesheet", :href => "style.css?val", :type => "text/css"}
     %link{:rel => "canonical", :href => "https://www.studioamanga.com/onelist/"}
     %link{:rel => "shortcut icon", :href => "https://www.studioamanga.com/img/favicon.ico"}
@@ -68,7 +68,7 @@
       %a{:href => "https://www.studioamanga.com"}
         %img{:alt => "StdAMG", :src => "img/amgmini-black.png"}/
       %p
-        “1List” for iPhone, iPad, iPod touch, and Apple Watch
+        “1List” for iPhone, iPad, Mac, and Apple Watch
         %br
         %a{:href => "releasenotes"}> Release Notes
         ,
